Request were missing 2

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 	<div id="user-info"></div>
 	<button id="logout-btn" data-i18n="logout">Logout</button>
 	<button id="my-projects-btn" data-i18n="my_projects">My Projects</button>
+	<button id="followed-projects-btn" data-i18n="followed_projects">View followed projects</button>
 
 	<section id="projects-list"></section>
 
